Modal fixed. Overflow problem solved. On save commit to edit needs to be set.

--- a/client/src/styles/components/_modal.scss
+++ b/client/src/styles/components/_modal.scss
@@ -6,14 +6,22 @@
 		flex-direction: column;
 		align-items: center;
 		justify-content: center;
-		width: 100%;
-		height: 100%;
+		margin: 8rem auto;
+		width: 50%;
+		height: 70%;
+		background-color: $light_color;
+		border-radius: 2rem;
+		box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+		overflow: hidden;
+		position: relative;
 	}
 	&-close {
 		position: absolute;
 		top: 0;
 		right: 0;
 		padding: 1rem;
+		border: none;
+		background-color: transparent;
 		cursor: pointer;
 		svg {
 			width: 1.5rem;
@@ -25,19 +33,19 @@
 		flex-direction: column;
 		align-items: center;
 		justify-content: space-between;
-		width: 10rem;
-		height: 10rem;
 		gap: 1rem;
 	}
+	
 }
+
 .modal.open {
 	display: block;
 	position: fixed;
-	top: 15%;
-	left: 15%;
-	width: 70%;
-	height: 70%;
-	background: rgba($light_color, 1);
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba($dark_color, 0.5);
 	z-index: 9999;
 	overflow: hidden;
 }
